fix: compra - pegar o id do usuário da sessão
