# backend/src/resources/compra/compra.schemas.ts
@@ -1,7 +1,6 @@
 import Joi, { Schema } from "joi";
 
 export const compraSchema: Schema = Joi.object().keys({
-  usuarioId: Joi.string().length(36).required(),
   eventoId: Joi.string().length(36).required(),
   qtde_ingressos: Joi.number().min(1).required(),
   valor_total: Joi.number().precision(2).required(),
